--- a/libXau.yaml
+++ b/libXau.yaml
@@ -1,16 +1,19 @@
 Name: libXau
 Summary: X.Org X11 libXau runtime library
-Version: 1.0.5
+Version: 1.0.6
 Release: 1
 Group: System/Libraries
 License: MIT
 URL: http://www.x.org/
 Sources:
     - http://xorg.freedesktop.org/releases/individual/lib/%{name}-%{version}.tar.bz2
-
+Description: |
+  %{summary}.
 PkgConfigBR:
     - xproto
 SubPackages:
     - Name: devel
       Summary: Development components for the libXau library
       Group: Development/Libraries
+      Description: |
+        %{summary}.
